--- a/.github/workflows/sphinx_deploy.yml
+++ b/.github/workflows/sphinx_deploy.yml
@@ -3,7 +3,7 @@ name: CD
 on:
   push:
     branches:
-      - master
+      - main
 
 jobs:
   docs:
@@ -25,7 +25,7 @@ jobs:
         git config --local user.email "agenciaimplementacion@gmail.com"
         git config --local user.name "AdminSwissTierrasColombia"
         git add .
-        git commit -m "Update documentation from ST" -a || true
+        git commit -m "Update documentation from QField LADM-COL" -a || true
         # The above command will fail if no changes were present, so we ignore
         # that.
     - name: Push changes
